# Trail

./: .env.example  .gitignore  FINAL_INTEGRATION.md  README.md  phase0.md  phase1.5.md  phase1.md  phase10.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.5.md  phase6.md  phase7.5.md  phase7.md  phase8.md  phase9.5.md  phase9.md  project_achitecture.md  pyproject.toml  requirements.txt
docker/: docker-compose.yml
docker/postgres/: init.sql
migrations/: 001_add_commits_and_last_synced.sql  002_add_project_scopes_and_commit_parsing.sql  003_add_notion_tables.sql  004_add_dependencies_and_subtasks.sql  006_add_project_snapshots.sql  007_add_abandonment_thresholds.sql  009_add_notion_commands_table.sql  010_add_planner_preferences.sql  013_add_user_time_off.sql  015_create_planned_task_verification.sql  016_add_untracked_sessions.sql  017_create_learned_patterns.sql  018_create_conversations.sql  019_create_user_achievements.sql
src/: dashboard.py
src/ai/brain/: brain_core.py  budget.py  context_manager.py  gamification.py  intent_classifier.py
src/ai/memory/: episodic.py  procedural.py  semantic.py  working.py
src/ai/reasoning/: react_engine.py
src/ai/tools/: base_tool.py  planner_tools.py
src/cli/: main.py
src/cli/commands/: brain.py  (+16 more)
src/config/: settings.py
tests/: test_phase0_phase1.py  test_phase10.py  test_phase1_5.py  test_phase2_2_5.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase6_5.py  test_phase7.py  test_phase7_5.py  test_phase8.py  test_phase9.py  test_phase9_5.py
tests/performance/: test_50_projects.py
(+45 files in other folders)
